--- a/go-playground.yaml
+++ b/go-playground.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: go-playground
-    image: golang:1.16
+    image: gcr.io/journey-service-load-test/go-playground:v1
   nodeSelector:
     cloud.google.com/gke-nodepool: go-playground
   tolerations:
